pii redactor changes

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,26 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+
+__pycache__
+stanford-ner
+*.pdf
+*.png
+*.jpg
+.idea
+nohup.out
+*.xlsx
+venv/
+migrations/
+.env
+htmlcov/
+.coverage
+Files
+.vscode/
+docker-compose.local.yml
+docker-compose_bkp.yml
+workspace.code-workspace
+logs/
+data.json
+
